--- a/polls/templates/polls/index.html
+++ b/polls/templates/polls/index.html
@@ -1,15 +1,26 @@
-{% if latest_question_list %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <title></title>
+  </head>
+  <body>
+    {% if latest_question_list %}
 
-<ul>
-  {% for question in latest_question_list %}
-    <li><a href="/polls/{{ question.id}}/"> {{ question.question_text}}</a>
+    <ul>
+      <!-- <p>{{latest_question_list}}</p> -->
+      {% for question in latest_question_list %}
+        <li><a href="{% url 'detail' question.id %}"> {{ question.question_text}}</a>
 
-    </li>
-    {% endfor %}
-    </ul>
+        </li>
+        {% endfor %}
+        </ul>
 
-    {% else %}
+        {% else %}
 
-    <p>No polls are available. </p>
+        <p>No polls are available. </p>
 
-  {% endif %}
+      {% endif %}
+
+  </body>
+</html>
